--- a/index.html
+++ b/index.html
@@ -12,19 +12,20 @@
 </head>
 <body>
     
-<div id="myDIV" class="header">
+<div  class="header">
   <h2 class="my-to-do-list">My To Do List</h2>
-  
+  <form>
   <input type="text" class="to-do-input" placeholder="Enter your task...">
-  <span  class="add-button"> <i class="fa fa-plus"></i>&ensp; Add Item</span>
+  <span> <input type="button" class="add-item-button" value="Add Item"> </span>
+</form>
 </div>
-<ul class="task-lists">
-    <li> Task 1<i class="fa fa-trash" style="float:right"></i></li>
-    <li> Task 2<i class="fa fa-trash" style="float:right"></i></li>
-    <li> Task 3<i class="fa fa-trash" style="float:right"></i></li>
-    <li> Task 4<i class="fa fa-trash" style="float:right"></i></li>
+<ul class="task-list">
+    <li class="task-list-item"> Task 1<i class="fa fa-trash" ></i></li>
+    <li class="task-list-item">Task 2<i class="fa fa-trash" ></i></li>
+    <li class="task-list-item">Task 3<i class="fa fa-trash"></i></li>
+    <li class="task-list-item"> Task 4<i class="fa fa-trash" ></i></li>
 </ul>
-<h3>1 out of 5 items selected</h3>
+<h3>1 out of 4 items selected</h3>
 
 </body>
 </html>
