--- a/index.html
+++ b/index.html
@@ -5,27 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="index.js"></script>
     <title>To-Do-List</title>
 </head>
 <body>
     
-<div  class="header">
-  <h2 class="my-to-do-list">My To Do List</h2>
+<div  class="main-container">
+  <h2 class="todo-list-heading">My To Do List</h2>
   <form>
-  <input type="text" class="to-do-input" placeholder="Enter your task...">
-  <span> <input type="button" class="add-item-button" value="Add Item"> </span>
-</form>
+      <input type="text" class="to-do-input" id="taskInput" placeholder="Enter your task...">
+      <button type="button" class="add-item-button" value="Add Item" onclick="addNewItem()">+ Add</button>
+  </form>
 </div>
-<ul class="task-list">
-    <li class="task-list-item"> Task 1<i class="fa fa-trash" ></i></li>
-    <li class="task-list-item">Task 2<i class="fa fa-trash" ></i></li>
-    <li class="task-list-item">Task 3<i class="fa fa-trash"></i></li>
-    <li class="task-list-item"> Task 4<i class="fa fa-trash" ></i></li>
-</ul>
-<h3>1 out of 4 items selected</h3>
+<ul class="task-list" id="taskList">
 
+</ul>
 </body>
 </html>
